@@ -29,6 +29,7 @@ Change log next version
     RestAssured.enableLoggingOfRequestAndResponseIfValidationFails();
   This has also been implemented in RestAssuredMockMvc (issue 212).
 * Fixed so that pretty logging of the response body doesn't change the body returned to the matchers.
+* Fixed so that it's possible to log data with charset binary.
 
 Change log 2.3.0 (2014-01-23)
 -----------------------------
